Description and stuff

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,8 @@
 {
   "manifest_version": 3,
   "name": "tuner",
-  "version": "0.0",
+  "description": "A chromatic tuner for your browser????",
+  "version": "0.0.1",
   "icons": { "48": "tuner_48.png", "128": "tuner_128.png" },
   "action": { "default_popup": "tuner.html" }
 }
